--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "hive.js"
   ],
   "author": "Marcel Klehr <mklehr@gmx.net>",
-  "license": {
-    "license": "MPL-2.0"
-  },
+  "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/hivejs/hive-plugin-author-colors/issues"
   },
